// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Name of the group should render the desktop nav when window size is > 400 1`] = `
<div>
  <TopNav />
  <h2>
    Header!
  </h2>
  <div
    style={
      Object {
        "color": "purple",
        "fontWeight": "600",
      }
    }
  >
    Put app content here.
  </div>
  <Component />
</div>
`;

exports[`Name of the group should render the mobile nav when window size is < 400 1`] = `
<div>
  <h2>
    Header!
  </h2>
  <div
    style={
      Object {
        "color": "purple",
        "fontWeight": "600",
      }
    }
  >
    Put app content here.
  </div>
  <Component />
  <MenuBar />
</div>
`;
